--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,28 @@
 # Ignore bundler config.
-/.bundle
-
-# Ignore all logfiles and tempfiles.
-/log/*
-!/log/.keep
+Hamster/.bundle
 
 # Ignore git's files
-/.git
+Hamster/.git
 
 # Ignore RubyMine's files
-/.idea
+Hamster/.idea
 
 # Ignore Vim's files
 /*.vim
 
 # Gemfile.lock
-/Gemfile.lock
-/vendor
+Hamster/Gemfile.lock
 
-.ruby-gemset
 
-.docker_history
-hamster
-projects/project_*/docker-compose.yaml*
-unexpected_tasks/**/*-compose.yaml
-projects/project_0000
-unexpected_tasks/test_task
+Hamster/hamster
+Hamster/projects/project_*/docker-compose.yaml*
+Hamster/unexpected_tasks/**/*-compose.yaml
+Hamster/projects/project_0000
+Hamster/unexpected_tasks/test_task
 
 /docker/pdf2htmlEX
-secrets/config.yml
-secrets/master.key
-secrets/credentials.yml
+Hamster/secrets/config.yml
+Hamster/secrets/master.key
+Hamster/secrets/credentials.yml
 secrets/test_key_rspec.key
-.DS_Store
+
